apps/base/vault-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-gateway
  labels:
    name: vault-gateway
    purpose: egress-proxy
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
