apps/base/vault-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-gateway
  namespace: vault-gateway
  labels:
    app: vault-gateway
spec:
  type: ClusterIP
  selector:
    app: vault-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
